26. New Prayer: Sense Alergies 
27. Internal: Some time/CPU control has been implemented for skills that require scanning the whole map (like Teleport
    or Gate, etc.  This means that for large maps, players may notice those skills have gotten much "slower", though 
    in reality, it will help your mud support more people doing such things.
28. New Disable Flags: DBERRORQUESTART, DBERRORQUE, CATALOGCACHE
29. New LIST parameter: SCRIPTS (for finding script usages and scriptables in your world)
30. Help money/currency/etc will show local currency.  help world currency shows all active currencies.
31. Scriptable codes $h/$H $s/$S added to support him/her. LOG command also changed to prevent spoofing.
32. Quests now save their authors, if the questmaker is used.
33. Cooking will now give slightly more specific names to the final recipe (Fried Water Fowl instead of Fried Poultry, etc)
34. Channel socials can now target Cataloged mobs (targetting other out-of-room mobs would have required a world scan)
35. CoffeeTables STATS system will now gather statistics on quests, though some stats require mobprog "hooks" to gather.
    The templates for the questmaker have been updated.
36. Necromancers will now be notified of the deaths of mobs nearby and of other players online.
37. Players will now get a message if they attempt to put on armor outside their class restrictions.  Messages are in lists.ini
38. ShopKeepers can now sell multiple-types of items.  Conflicting types are resolved when set.
39. CommandJournals now support SCRIPT= flag to allow you to scrip entries into your journal.  An example for BUG is included.
40. New Death/Flee consequence: ASTRAL_RES -- same as ASTRAL, but players can use ENTER to self-res.
41.
??. * I changed the name of one of the library interfaces, so make sure you follow the part of the upgrade instructions
    regarding deleting your old "com" directory before running the new build.
??. No bugs are good bugs.