@@ -10930,7 +10930,7 @@ accessor class, CMLib, which we mentioned earlier.</p>
 
 
 
-                    <td>ItemBuilderLibrary</td>
+                    <td>ItemBalanceLibrary</td>
 
 
 
