@@ -2179,6 +2179,7 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 39. CommandJournals now support SCRIPT= flag to allow you to scrip entries into your journal.  An example for BUG is included.
 40. New Death/Flee consequence: ASTRAL_RES -- same as ASTRAL, but players can use ENTER to self-res.
 41.
-??. * I changed the name of one of the library interfaces, so make sure you follow the part of the upgrade instructions
-    regarding deleting your old "com" directory before running the new build.
+??. * I changed the name of a few of the library interfaces, so make sure you follow the 
+	* part of the upgrade instructions regarding deleting your old "com" directory before 
+	* running the new build.
 ??. No bugs are good bugs.
